fix- 外層body設定為overflow-hidden

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,9 +4,7 @@
 @plugin "daisyui" {
   exclude: rootscrollgutter;
 }
-:root {
-  --background: #ffffff;
-}
+
 
 
 @theme {
